Removed the "solutions". :)

--- a/notebooks/Modeling_Routine_Behavior_IRL.ipynb
+++ b/notebooks/Modeling_Routine_Behavior_IRL.ipynb
@@ -93,12 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state_feature_names_dict = {'Weather':['Hot','Cold'],\n",
-    "                            'At Home':['True', 'False'], \n",
-    "                            'Has Jacket': ['True', 'False'],\n",
-    "                            'Holding Jacket':['True', 'False'], \n",
-    "                            'Wearing Jacket':['True', 'False'],\n",
-    "                            'Feeling':['Cold','Just Right', 'Hot']}"
+    "state_feature_names_dict = {'Weather':['Hot','Cold']} #TODO: Add your features here"
    ]
   },
   {
@@ -107,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "action_feature_names_dict = {'Jacket':['Bring','Leave','On','Off']}"
+    "action_feature_names_dict = {}  #TODO: Add your features here"
    ]
   },
   {
@@ -129,6 +124,15 @@
    "source": [
     "behavior_instances = np.load(\"data/behavior_instances.npy\")\n",
     "behavior_instances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO: Explore behaviors instances here. What did you find?"
    ]
   },
   {
@@ -298,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weather_transition_matrix = np.matrix('0.8 0.2; 0.05 0.95')"
+    "weather_transition_matrix = None #TODO: What should the transitions be?"
    ]
   },
   {
@@ -548,6 +552,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO: Explore the environemnt here. What are transitions between different states?"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -793,8 +806,8 @@
     "    expt = lambda x: np.exp(x/temperature)\n",
     "    tlog = lambda x: temperature * np.log(x)\n",
     "\n",
-    "    # ∀ s,a: policy_{s,a} = exp((Q_{s,a} - V_s)/t)\n",
-    "    policy = expt(Q - V)\n",
+    "    # TODO: How do we calculate the policy?\n",
+    "    policy = None\n",
     "        \n",
     "    return V, Q, policy"
    ]
@@ -1084,6 +1097,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO: explore the model here. What can you say about the behaviors?"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1192,7 +1214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# What have we done?\n",
+    "# What have we done today?\n",
     "\n",
     "This is a very simple model for a very simple problem that illustrates using IRL to model people's behaviors from  behavior traces.\n",
     "\n",
@@ -1201,6 +1223,13 @@
     "* **Captured the uncertainity of human behavior**: created a probabilistic model of human behavior.\n",
     "* **Estimated probability distribution of different behaviors given context from data**: used a principled approach to estimating these probablitis from the data. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
