--- a/notebooks/Modeling_Routine_Behavior_IRL.ipynb
+++ b/notebooks/Modeling_Routine_Behavior_IRL.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,20 +89,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "state_feature_names_dict = {'Weather':['Hot','Cold']} #TODO: Add your features here"
+    "state_feature_names_dict = {'Weather':['Hot','Cold'],\n",
+    "                            'At Home':['True', 'False'], \n",
+    "                            'Has Jacket': ['True', 'False'],\n",
+    "                            'Holding Jacket':['True', 'False'], \n",
+    "                            'Wearing Jacket':['True', 'False'],\n",
+    "                            'Feeling':['Cold','Just Right', 'Hot']}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "action_feature_names_dict = {}  #TODO: Add your features here"
+    "action_feature_names_dict = {'Jacket':['Bring','Leave','On','Off']}"
    ]
   },
   {
@@ -118,9 +123,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[4, 2],\n",
+       "        [6, 2],\n",
+       "        [6, 2],\n",
+       "        [6, 2]],\n",
+       "\n",
+       "       [[0, 0],\n",
+       "        [1, 3],\n",
+       "        [5, 2],\n",
+       "        [6, 2]],\n",
+       "\n",
+       "       [[4, 2],\n",
+       "        [6, 2],\n",
+       "        [6, 2],\n",
+       "        [6, 2]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[0, 0],\n",
+       "        [1, 3],\n",
+       "        [1, 3],\n",
+       "        [1, 3]],\n",
+       "\n",
+       "       [[4, 2],\n",
+       "        [6, 2],\n",
+       "        [6, 2],\n",
+       "        [6, 2]],\n",
+       "\n",
+       "       [[0, 1],\n",
+       "        [7, 3],\n",
+       "        [7, 3],\n",
+       "        [7, 3]]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "behavior_instances = np.load(\"data/behavior_instances.npy\")\n",
     "behavior_instances"
@@ -128,11 +174,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4, 2],\n",
+       "       [6, 2],\n",
+       "       [6, 2],\n",
+       "       [6, 2]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#TODO: Explore behaviors instances here. What did you find?"
+    "#TODO: Explore behaviors instances here. What did you find?\n",
+    "behavior_instances[0]"
    ]
   },
   {
@@ -160,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,11 +359,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "weather_transition_matrix = None #TODO: What should the transitions be?"
+    "weather_transition_matrix = np.matrix([[0.8, 0.2], [0.05, 0.95]])"
    ]
   },
   {
@@ -314,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,9 +597,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "State:  ['Weather:Hot', 'At Home:True', 'Has Jacket:True', 'Holding Jacket:False', 'Wearing Jacket:False', 'Feeling:Just Right']\n",
+      "State:  ['Weather:Hot', 'At Home:False', 'Has Jacket:True', 'Holding Jacket:True', 'Wearing Jacket:False', 'Feeling:Just Right']\n",
+      "State:  ['Weather:Hot', 'At Home:False', 'Has Jacket:True', 'Holding Jacket:False', 'Wearing Jacket:True', 'Feeling:Hot']\n",
+      "State:  ['Weather:Hot', 'At Home:False', 'Has Jacket:False', 'Holding Jacket:False', 'Wearing Jacket:False', 'Feeling:Just Right']\n",
+      "State:  ['Weather:Cold', 'At Home:True', 'Has Jacket:True', 'Holding Jacket:False', 'Wearing Jacket:False', 'Feeling:Just Right']\n",
+      "State:  ['Weather:Cold', 'At Home:False', 'Has Jacket:True', 'Holding Jacket:True', 'Wearing Jacket:False', 'Feeling:Cold']\n",
+      "State:  ['Weather:Cold', 'At Home:False', 'Has Jacket:True', 'Holding Jacket:False', 'Wearing Jacket:True', 'Feeling:Just Right']\n",
+      "State:  ['Weather:Cold', 'At Home:False', 'Has Jacket:False', 'Holding Jacket:False', 'Wearing Jacket:False', 'Feeling:Cold']\n",
+      "Initial state distribution:  [0.5 0.  0.  0.  0.5 0.  0.  0. ]\n",
+      "State features:  ['Weather:Hot', 'Weather:Cold', 'At Home:True', 'At Home:False', 'Has Jacket:True', 'Has Jacket:False', 'Holding Jacket:True', 'Holding Jacket:False', 'Wearing Jacket:True', 'Wearing Jacket:False', 'Feeling:Cold', 'Feeling:Just Right', 'Feeling:Hot']\n",
+      "Action features:  ['Jacket:Bring', 'Jacket:Leave', 'Jacket:On', 'Jacket:Off']\n",
+      "[[1 0 1 0 1 0 0 1 0 1 0 1 0]\n",
+      " [1 0 0 1 1 0 1 0 0 1 0 1 0]\n",
+      " [1 0 0 1 1 0 0 1 1 0 0 0 1]\n",
+      " [1 0 0 1 0 1 0 1 0 1 0 1 0]\n",
+      " [0 1 1 0 1 0 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 1 0 1 0 0 1 1 0 0]\n",
+      " [0 1 0 1 1 0 0 1 1 0 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1 0 1 1 0 0]]\n",
+      "Transition probabilities: \n",
+      "[[[0.   0.8  0.   0.   0.   0.2  0.   0.  ]\n",
+      "  [0.   0.   0.   0.8  0.   0.   0.   0.2 ]\n",
+      "  [0.   0.   0.8  0.   0.   0.   0.2  0.  ]\n",
+      "  [0.   0.   0.   0.   0.   0.   0.   0.  ]]\n",
+      "\n",
+      " [[0.   0.   0.   0.   0.   0.   0.   0.  ]\n",
+      "  [0.   0.   0.   0.   0.   0.   0.   0.  ]\n",
+      "  [0.   0.   0.8  0.   0.   0.   0.2  0.  ]\n",
+      "  [0.   0.8  0.   0.   0.   0.2  0.   0.  ]]\n",
+      "\n",
+      " [[0.   0.   0.   0.   0.   0.   0.   0.  ]\n",
+      "  [0.   0.   0.   0.   0.   0.   0.   0.  ]\n",
+      "  [0.   0.   0.8  0.   0.   0.   0.2  0.  ]\n",
+      "  [0.   0.8  0.   0.   0.   0.2  0.   0.  ]]\n",
+      "\n",
+      " [[0.   0.   0.   0.   0.   0.   0.   0.  ]\n",
+      "  [0.   0.   0.   0.   0.   0.   0.   0.  ]\n",
+      "  [0.   0.   0.   0.   0.   0.   0.   0.  ]\n",
+      "  [0.   0.   0.   0.8  0.   0.   0.   0.2 ]]\n",
+      "\n",
+      " [[0.   0.05 0.   0.   0.   0.95 0.   0.  ]\n",
+      "  [0.   0.   0.   0.05 0.   0.   0.   0.95]\n",
+      "  [0.   0.   0.05 0.   0.   0.   0.95 0.  ]\n",
+      "  [0.   0.   0.   0.   0.   0.   0.   0.  ]]\n",
+      "\n",
+      " [[0.   0.   0.   0.   0.   0.   0.   0.  ]\n",
+      "  [0.   0.   0.   0.   0.   0.   0.   0.  ]\n",
+      "  [0.   0.   0.05 0.   0.   0.   0.95 0.  ]\n",
+      "  [0.   0.05 0.   0.   0.   0.95 0.   0.  ]]\n",
+      "\n",
+      " [[0.   0.   0.   0.   0.   0.   0.   0.  ]\n",
+      "  [0.   0.   0.   0.   0.   0.   0.   0.  ]\n",
+      "  [0.   0.   0.05 0.   0.   0.   0.95 0.  ]\n",
+      "  [0.   0.05 0.   0.   0.   0.95 0.   0.  ]]\n",
+      "\n",
+      " [[0.   0.   0.   0.   0.   0.   0.   0.  ]\n",
+      "  [0.   0.   0.   0.   0.   0.   0.   0.  ]\n",
+      "  [0.   0.   0.   0.   0.   0.   0.   0.  ]\n",
+      "  [0.   0.   0.   0.05 0.   0.   0.   0.95]]]\n"
+     ]
+    }
+   ],
    "source": [
     "environment = ThinkBeforeYouStepOut(state_feature_names_dict, action_feature_names_dict, weather_transition_matrix)\n",
     "mdp = MDP(environment)    \n",
@@ -573,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +934,7 @@
     "    tlog = lambda x: temperature * np.log(x)\n",
     "\n",
     "    # TODO: How do we calculate the policy?\n",
-    "    policy = None\n",
+    "    policy = expt(Q - V)\n",
     "        \n",
     "    return V, Q, policy"
    ]
@@ -822,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1045,9 +1172,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "State feature names:  ['Weather:Hot', 'Weather:Cold', 'At Home:True', 'At Home:False', 'Has Jacket:True', 'Has Jacket:False', 'Holding Jacket:True', 'Holding Jacket:False', 'Wearing Jacket:True', 'Wearing Jacket:False', 'Feeling:Cold', 'Feeling:Just Right', 'Feeling:Hot']\n",
+      "Action feature names:  ['Jacket:Bring', 'Jacket:Leave', 'Jacket:On', 'Jacket:Off']\n",
+      "Epoch: 9 log likelihood of all traj: -64.8638100398208 , average per traj step: -0.04454932008229451\n",
+      "Epoch: 19 log likelihood of all traj: -1.094569549699458 , average per traj step: -0.0007517648006177596\n",
+      "Epoch: 29 log likelihood of all traj: -1.0858156045119403 , average per traj step: -0.0007457524756263326\n",
+      "Epoch: 39 log likelihood of all traj: -1.2197003381834661 , average per traj step: -0.0008377062762249081\n",
+      "Epoch: 49 log likelihood of all traj: -1.32512730805791 , average per traj step: -0.0009101149093804327\n",
+      "Epoch: 59 log likelihood of all traj: -1.0793901860086503 , average per traj step: -0.0007413394134674796\n",
+      "Epoch: 69 log likelihood of all traj: -1.0723723981335747 , average per traj step: -0.0007365195042126199\n",
+      "Epoch: 79 log likelihood of all traj: -1.2166724197960326 , average per traj step: -0.0008356266619478246\n",
+      "Epoch: 89 log likelihood of all traj: -1.4772299058994718 , average per traj step: -0.0010145809793265603\n",
+      "Epoch: 99 log likelihood of all traj: -1.0870686493895845 , average per traj step: -0.0007466130833719673\n",
+      "Epoch: 109 log likelihood of all traj: -1.3252992663777627 , average per traj step: -0.0009102330126220898\n",
+      "Epoch: 119 log likelihood of all traj: -1.0735798908394711 , average per traj step: -0.0007373488261260103\n",
+      "Epoch: 129 log likelihood of all traj: -1.2790830127786947 , average per traj step: -0.0008784910802051474\n",
+      "Epoch: 139 log likelihood of all traj: -1.079645885170397 , average per traj step: -0.0007415150310236243\n",
+      "Epoch: 149 log likelihood of all traj: -1.575501460681373 , average per traj step: -0.0010820751790394047\n",
+      "Epoch: 159 log likelihood of all traj: -1.212692478416226 , average per traj step: -0.00083289318572543\n",
+      "Epoch: 169 log likelihood of all traj: -1.3830978286696802 , average per traj step: -0.0009499298273830221\n",
+      "Epoch: 179 log likelihood of all traj: -1.3159172884733101 , average per traj step: -0.0009037893464789218\n",
+      "Epoch: 189 log likelihood of all traj: -1.0731507018750983 , average per traj step: -0.0007370540534856444\n",
+      "Epoch: 199 log likelihood of all traj: -1.0802621913169148 , average per traj step: -0.0007419383182121667\n",
+      "Epoch: 209 log likelihood of all traj: -1.2713464563742969 , average per traj step: -0.0008731775112460831\n",
+      "Epoch: 219 log likelihood of all traj: -1.9646035875539651 , average per traj step: -0.0013493156507925585\n",
+      "Epoch: 229 log likelihood of all traj: -1.0908648299425752 , average per traj step: -0.0007492203502352851\n",
+      "Epoch: 239 log likelihood of all traj: -1.437282506179086 , average per traj step: -0.0009871445784197018\n",
+      "Epoch: 249 log likelihood of all traj: -1.8524465998379551 , average per traj step: -0.0012722847526359582\n",
+      "Epoch: 259 log likelihood of all traj: -1.0992762717503446 , average per traj step: -0.0007549974393889729\n",
+      "Epoch: 269 log likelihood of all traj: -1.0741958935048528 , average per traj step: -0.0007377719048797066\n",
+      "Epoch: 279 log likelihood of all traj: -1.1358983172005324 , average per traj step: -0.0007801499431322337\n",
+      "Epoch: 289 log likelihood of all traj: -1.448595815919413 , average per traj step: -0.0009949147087358605\n",
+      "Epoch: 299 log likelihood of all traj: -1.803384351743476 , average per traj step: -0.0012385881536699699\n",
+      "Final reward weights:  [[ 0.47347058 -0.0047128   0.53252987  0.15671542  0.40180756  0.72816081\n",
+      "   0.55599493  0.23566781  0.15807325  0.23128972  0.13245373  0.5730158\n",
+      "   0.79603666]]\n",
+      "Final policy:  [[9.90746165e-001 9.25171745e-003 2.11790554e-006 2.14903552e-196]\n",
+      " [3.64574236e-194 3.64574236e-194 2.13768278e-006 9.99997862e-001]\n",
+      " [1.34104832e-186 1.34104832e-186 2.13768278e-006 9.99997862e-001]\n",
+      " [5.38168747e-192 5.38168747e-192 5.38168747e-192 1.00000000e+000]\n",
+      " [3.51562438e-002 9.87387927e-007 9.64842769e-001 9.68075896e-098]\n",
+      " [2.32746863e-076 2.32746863e-076 9.64843721e-001 3.51562785e-002]\n",
+      " [2.84792861e-078 2.84792861e-078 9.64843721e-001 3.51562785e-002]\n",
+      " [3.24927992e-070 3.24927992e-070 3.24927992e-070 1.00000000e+000]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Demonstrates the usage of the implemented MaxCausalEnt IRL algorithm. \n",
     "    \n",
