Removed the solutions and cleared the checkpoints.

--- a/notebooks/Modeling_Routine_Behavior_IRL.ipynb
+++ b/notebooks/Modeling_Routine_Behavior_IRL.ipynb
@@ -192,8 +192,7 @@
     }
    ],
    "source": [
-    "#TODO: Explore behaviors instances here. What did you find?\n",
-    "behavior_instances[0]"
+    "#TODO: Explore behaviors instances here. What did you find?"
    ]
   },
   {
@@ -934,7 +933,7 @@
     "    tlog = lambda x: temperature * np.log(x)\n",
     "\n",
     "    # TODO: How do we calculate the policy?\n",
-    "    policy = expt(Q - V)\n",
+    "    policy = ?\n",
     "        \n",
     "    return V, Q, policy"
    ]
